--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Picross</title>
+  <script src="dist/main.js"></script>
 </head>
 
 <body>
   <div id="elm"></div>
-  <script src="dist/main.js"></script>
+  <script>
+    var app = Elm.Main.init({
+        node: document.getElementById('elm'),
+        flags: {
+          width: window.innerWidth,
+          height: window.innerHeight
+        }
+    });
+  </script>
 </body>
 </html>
